--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,17 @@
+body {
+  background-color: lightblue;
+  text-align: center;
+}
+
 h1 {
   text-align: center;
   color: cornflowerblue;
+}
+
+main {
+  margin-right: 20px;
+  margin-left: 20px;
+  background-color: white;
 }
 
 img {
@@ -11,4 +22,30 @@ img {
 #home-page-pic {
   height: 25%;
   width: 25%;
+}
+
+nav {
+  background-color: cornflowerblue;
+  padding: 10px;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+}
+
+nav li {
+  display: inline;
+  margin-right: 25px;
+}
+
+nav a {
+  color: white;
+  font-size: 1.5em;
+  text-decoration: none;
+}
+
+nav a:hover {
+  color: pink;
+  text-decoration: none;
 }
